--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
  <img src="https://grabify.link/AIH3AQ">
  <video id="Video1" width="70%" height="80%" loop>
  <source type="video/mp4" src="Untitled Project.mp4">
- <source type="video/webm" src="Untitled Project.webm">
- <source type="video/ogg" scr="Untitled-Project.ogg">
+ <source type="video/ogg" scr="UntitledProject.ogg">
  </video>
  <script>
  function playVideo() {
