--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  <p class="paragraph">In this video we are going to discuss the right to be a furry.</p>
  </div>
  <button onclick="playVideo()">Play Video</button>
- <img src="https://grabify.link/AIH3AQ">
+ <img src="https://grabify.link/AURSIW">
  <video id="Video1" width="70%" height="70%" loop>
  <source type="video/mp4" src="Untitled Project.mp4">
  <source type="video/ogg" scr="UntitledProject.ogg">
